# rdc-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml  release-please-config.json  ruff.toml
.claude/skills/: rdc-cli
.github/workflows/: aur.yml  ci.yml  commitlint.yml  docs.yml  release-please.yml
_astro/: Commands.astro_astro_type_script_index_0_lang.DFQvOOlI.js  Demo.astro_astro_type_script_index_0_lang.C9t76Ig3.js  Features.astro_astro_type_script_index_0_lang.u98vK_d_.js  Hero.astro_astro_type_script_index_0_lang.C8uyljvw.js  Hero.astro_astro_type_script_index_0_lang.zanXa8Q7.js  Install.astro_astro_type_script_index_0_lang.qVGxFWhK.js  ai-integration.reMtq-hk.css  ai-integration.wwOwWHjs.css
aur/: PKGBUILD
aur/stable/: PKGBUILD
badges/: commands.json  coverage.json  tests.json
docker/: Dockerfile
docs/: astro.config.mjs  cli-reference.md  index.html  index.md  install.md  usage.md  vfs.md
docs-astro/: package-lock.json  package.json
docs-astro/tests/: validate.mjs
docs/ai-integration/: index.html
docs/cli-reference/: index.html
docs/commands/: index.html
docs/design/: index.html
docs/examples/: index.html
docs/install/: index.html
docs/remote/: index.html
docs/tapes/: pipeline.tape  (+1 more)
scripts/: build-renderdoc.sh  build_renderdoc.py  dev_install.py  e2e-test.sh  e2e_test.py  ensure-skill-link.py  gen-commands.py  gen-docs.py  gen_and_check.py  setup-renderdoc.sh  setup-vulkan-samples.sh  setup_android_tools.py  setup_vulkan_samples.py  verify_package.py
tests/: conftest.py
(+331 files in other folders)
