[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdc-cli"
version = "0.1.0"
description = "Unix-friendly CLI for RenderDoc captures"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jim"}]
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
imaging = ["Pillow>=10.0"]
diff = ["Pillow>=10.0", "numpy>=1.24"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.scripts]
rdc = "rdc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = ["gpu: requires real renderdoc module and GPU"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
